Updated reference to renamed 'resque-scheduler' & times shown in server views are now Time.zone relative.

--- a/lib/resque-retry/server/views/retry.erb
+++ b/lib/resque-retry/server/views/retry.erb
@@ -33,7 +33,7 @@
           <input type="submit" value="Queue now">
         </form>
       </td>
-      <td><a href="<%= u "retry/#{timestamp}" %>"><%= format_time(Time.at(timestamp)) %></a></td>
+      <td><a href="<%= u "retry/#{timestamp}" %>"><%= format_time(Time.zone.at(timestamp)) %></a></td>
       <td><%= delayed_timestamp_size = resque.delayed_timestamp_size(timestamp) %></td>
       <% if job && delayed_timestamp_size == 1 %>
         <td><%= h job['class'] %></td>
